--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@ body {
   background: #f7f7f7;
   color: #1c1c1c;
   margin: 64px;
+  width: 90%;
+  margin: auto;
+  max-width: 1500px;
   border-radius: 20px;
   box-shadow: 6px 6px 6px #0e1d2f;
   padding: 64px;
@@ -61,13 +64,11 @@ body {
 .portfolio {
   margin-top: 64px;
   display: grid;
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(630px, 1fr));
   gap: 16px;
 }
 
 .projetos {
-  display: flex;
-  flex-direction: column;
   background: linear-gradient(230.65deg, #499cfe 27.49%, #9cc8fc 83.19%);
   margin-top: 32px;
   padding: 32px;
@@ -95,12 +96,10 @@ body {
 }
 
 .contato {
-  display: flex;
-  flex-direction: column;
   background: linear-gradient(230.65deg, #499cfe 27.49%, #9cc8fc 83.19%);
   margin-top: 32px;
   padding: 32px;
-  padding-left: 64px;
+  padding-left: 32px;
   box-shadow: 2px 2px 4px rgba(16, 16, 16, 0.42);
   border-radius: 20px;
 }
@@ -144,4 +143,20 @@ body {
   background: #1c1c1c;
   color: #f7f7f7;
   border: 2px solid #f7f7f7;
+}
+
+@media (max-width: 630px){
+  .container .cabecalho .perfil{
+    flex-direction: column;
+  }
+
+  .container .cabecalho .perfil .perfil-img{
+    order: -1;
+    max-width: 160px;
+    text-align: center;
+  }
+
+  html{
+    font-size: 50%;
+  }
 }
